fix overflow

--- a/style.css
+++ b/style.css
@@ -3,8 +3,7 @@
 html,
 body {
   margin: 0;
-  overflow: hidden;
-  height: 100%;
+  min-height: 100vh;
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
 }
@@ -16,8 +15,6 @@ canvas[resize] {
 }
 
 main {
-  height: 100%;
-  width: 100%;
   display: grid;
   grid-template:
   "header canvas" 10rem
